# HarmonyOS-5-Kernel

./: README.md  README_Kernel.txt  README_MODULE.txt  README_Version.txt  build.sh  build_tools.sh
kernel/hongmeng/hm-cmake-modules/: CMakeLists.txt
kernel/hongmeng/hm-cmake-modules/src/Compiler/: LLVM-C.cmake
kernel/hongmeng/hm-cmake-modules/src/Findmodules/: FindCompilerLibs_LLVM.cmake  FindHMOpensslLib_sysk.cmake  FindHMVispLibs.cmake  FindHWSecureC_sysk.cmake
kernel/hongmeng/hm-cmake-modules/src/Platform/: Hongmeng-LLVM-ASM.cmake  Hongmeng-LLVM-C.cmake  Hongmeng.cmake
kernel/hongmeng/hm-cmake-modules/tests/cmd/: include.cmake  libversion.cmake  src.cmake
kernel/hongmeng/hm-cmake-modules/tests/tools/: tooltest.py
kernel/hongmeng/hm-verif-kernel/kernel/: CMakeLists.txt  HMbuild  Kconfig  LinkKernel.cmake  kernel.release.h.in
kernel/hongmeng/hm-verif-kernel/kernel/arch/: HMbuild  Kconfig
kernel/hongmeng/hm-verif-kernel/kernel/scripts/: link-kernel.sh.in  setlocalversion
kernel/hongmeng/hm-verif-kernel/uapps/devhost/: CMakeLists.txt  HMbuild  Kconfig  block_if.c  devhost.c  devhost.h  devhost_api.c  devhost_backend.c  devhost_backend.h  devhost_irq.c  devhost_svrp.c  dh_plugin.lds  sysif_ep.c
kernel/hongmeng/hm-verif-kernel/ulibs/: CMakeLists.txt  HMbuild  Kconfig
kernel/hongmeng/hm-verif-kernel/ulibs/klibs/: scq.c
kernel/hongmeng/hm-verif-kernel/ulibs/libalgo/: idr.c  interval_tree.c  radix_tree.c  radix_tree_node_alloc.c  radixtree_internal.h
kernel/hongmeng/hm-verif-kernel/ulibs/libbunch/: CMakeLists.txt  bunch_actv.c
kernel/hongmeng/hm-verif-kernel/ulibs/libcrt/: CMakeLists.txt  Makefile  crt_aux.c  hook.c
kernel/hongmeng/hm-verif-kernel/ulibs/libfdtable/: HMbuild
kernel/hongmeng/hm-verif-kernel/ulibs/libhguard/: Makefile  service.c
kernel/hongmeng/hm-verif-kernel/ulibs/libhmactv/: CMakeLists.txt  actv_assist.c  actv_id.c  actv_local_area.c  actv_thread_info.c
kernel/hongmeng/hm-verif-kernel/ulibs/libhmcert/: CMakeLists.txt  HMbuild
kernel/hongmeng/hm-verif-kernel/ulibs/libhmebr/: ebr.c  ebr_common.c  ebr_common.h  ebr_defer.c  ebr_defer.h  ebr_radix_alloc.c  ebr_radix_tree.c  ebr_rb_htable.c  ebr_rbtree.c
kernel/hongmeng/hm-verif-kernel/ulibs/libhmelf/: elf_impl.h  elf_load.c  symbol.c
kernel/hongmeng/hm-verif-kernel/ulibs/libhmfaultevt/: build.cmake
kernel/hongmeng/hm-verif-kernel/ulibs/libhmiov/: CMakeLists.txt  Makefile
kernel/hongmeng/hm-verif-kernel/ulibs/libhmirq/: CMakeLists.txt  irq.c
kernel/hongmeng/hm-verif-kernel/ulibs/libhmlog/: HMbuild  hmlog_ratelimit.c
kernel/hongmeng/hm-verif-kernel/ulibs/libhmnotifier/: Makefile
kernel/hongmeng/hm-verif-kernel/ulibs/libhmpm/: CMakeLists.txt
kernel/hongmeng/hm-verif-kernel/ulibs/libhmshmalloc/: CMakeLists.txt
kernel/hongmeng/hm-verif-kernel/ulibs/libhmsrv_key/: key_control.c
kernel/hongmeng/hm-verif-kernel/ulibs/libhmsrv_sys/: HMbuild  hm_coobj.c  hm_coobj_init.c  hm_flush_cache.c  hm_futex.c  hm_mem.c  hm_procmgr.c  hm_sysctrl.c  hm_thread.c  hm_timer.c  hm_timer_internal.h  hm_timer_kernel_space.c  hm_timer_utils_public.c  hm_ufutex.c  hm_vdso.c  hm_vm.c
kernel/hongmeng/hm-verif-kernel/ulibs/libhmsync/: HMbuild  current_tid.c  raw_bitlock.c  raw_mutex.c  raw_prioqueue.c  raw_rwlock.c  raw_thread_attr.c  raw_thread_create.c  raw_thread_impl.h  raw_thread_specific.c  raw_tls_internal.c  thread.c
kernel/hongmeng/hm-verif-kernel/ulibs/libhmtrace_ng/: hmtrace_output.c  hmtrace_shm.c
kernel/hongmeng/hm-verif-kernel/ulibs/libhmucap/: build.cmake  kobjs_list.h  ucap_cpuctx.c
kernel/hongmeng/hm-verif-kernel/ulibs/libhmuname/: HMbuild
kernel/hongmeng/hm-verif-kernel/ulibs/libkbox/: HMbuild  Makefile
kernel/hongmeng/hm-verif-kernel/ulibs/libkcov/: kcov.c
kernel/hongmeng/hm-verif-kernel/ulibs/libkev/: HMbuild
kernel/hongmeng/hm-verif-kernel/ulibs/libmem/: HMbuild  debug.c  memm_slab.c  slab.c  slab.h  slab_ops.c  slab_per_cpu.c  slab_per_cpu.h  slab_track.c  umem.c
kernel/hongmeng/hm-verif-kernel/ulibs/libpanic/: CMakeLists.txt  bug_impl.c
kernel/hongmeng/hm-verif-kernel/ulibs/libperf/: perf.c  pmuv1.c
kernel/hongmeng/hm-verif-kernel/ulibs/libpreempt/: CMakeLists.txt
kernel/hongmeng/hm-verif-kernel/ulibs/libself_rel/: Makefile  relocate.c
kernel/hongmeng/hm-verif-kernel/ulibs/libstrace/: Makefile  strace.h
kernel/hongmeng/hm-verif-kernel/ulibs/libsysevent/: CMakeLists.txt  HMbuild  build.cmake
kernel/hongmeng/hm-verif-kernel/ulibs/libsysif/: utils_ldso.c
kernel/hongmeng/hm-verif-kernel/ulibs/libtrack_info/: HMbuild  track_info.c
kernel/hongmeng/hm-verif-kernel/ulibs/libucfi/: CMakeLists.txt
kernel/hongmeng/hm-verif-kernel/ulibs/libvdso/: Kconfig  sigentry.c
kernel/hongmeng/hm-verif-kernel/ulibs/libvhost_user/: CMakeLists.txt  Makefile  vhost_client.c  vhost_server.c
kernel/hongmeng/hm-verif-kernel/ulibs/libvpipe/: build.cmake
kernel/hongmeng/hm-verif-kernel/ulibs/libvsyscall/: HMbuild
kernel/kernel/hongmeng/hm-filesystems/fslibs/: CMakeLists.txt  FindHMFSLibs.cmake  Kconfig
kernel/kernel/hongmeng/hm-libvsync/: CHANGELOG.md  CMakeLists.txt  FindLibVSync.cmake  HMbuild  Kconfig  README.md
kernel/kernel/hongmeng/hm-network/ulibs/: CMakeLists.txt  FindHMNetLibs.cmake  FindHMNetLibs_sysk.cmake  HMbuild  Kconfig
kernel/kernel/hongmeng/hm-security/include/: CMakeLists.txt  FindHMAuditLib.cmake  FindHMAuditLib_sysk.cmake  FindHMCryptLib.cmake  FindHMCryptLib_sysk.cmake  FindHMDmverityLib.cmake  FindHMDmverityLib_sysk.cmake  FindHMELogLib.cmake  FindHMELogLib_sysk.cmake  FindHMSeHarmonyLib.cmake  FindHMSeHarmonyLib_sysk.cmake  FindHMSecLib.cmake  FindHMSecLib_sysk.cmake  FindHMSepolLib.cmake  FindHMSepolLib_sysk.cmake  FindHMSigLib.cmake  FindHMSigLib_sysk.cmake  FindKasanLib.cmake  FindKasanLib_sysk.cmake  FindKeymgrLib.cmake  FindSecKcovLib.cmake  FindSecKcovLib_sysk.cmake  FindTsanLib_sysk.cmake  HMbuild  Kconfig  kconfig_sec.h  libpolicy_api.h
kernel/open_source/hm-openeuler-musl/unittest/: CMakeLists.txt  README  build.sh  clean.sh
kernel/open_source/hm-openeuler-musl/unittest/hm/: CMakeLists.txt
(+17253 files in other folders)
